<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorred"
    tools:context=".aboutapp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp">
            <ImageButton
                android:id="@+id/image_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="10dp"
                android:background="@drawable/group_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="50sp"
                android:fontFamily="cursive"
                android:textColor="@color/colorred" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorred"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/about"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/mainblue">
        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/myname"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageButton
                android:id="@+id/linkedin"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_linkedin"/>
            <ImageButton
                android:id="@+id/github"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_github"
                />
            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_instagram" />
        </LinearLayout>
        <TextView
            android:id="@+id/endnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endnote"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>